<resources>
    <string name="app_name">智能汽车监控系统</string>
    <string name="menu">设置</string>
    <string name="moren">默认</string>
    <string-array name="watermeter">
        <item>-40</item>
        <item>5</item>
        <item>50</item>
        <item>95</item>
        <item>140</item>
        <item>185</item>
        <item>230</item>
    </string-array>
    <string-array name="speedmeter">
        <item>0</item>
        <item>45</item>
        <item>90</item>
        <item>135</item>
        <item>180</item>
        <item>225</item>
        <item>270</item>
    </string-array>
    <string-array name="turnSpeedmeter">
        <item>0</item>
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>15</item>
        <item>18</item>
    </string-array>
    <string name="camera_user">用户名</string>
    <string name="version_code">版本号</string>
    <string name="soft_name">软件名</string>
    <string name="camera_pwd">密码</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="exit_alert">确认退出吗 ?</string>
    <string name="password">密码:</string>
    <string name="showpwd">显示密码</string>
    <string name="connected">已连接</string>
    <string name="pwd_no_empty">密码不能为空</string>
    <string name="camera_port">端口</string>
    <string name="send_error">发送失败</string>
    <string name="recv_error">接收失败</string>
    <string name="unknow_error">未知错误</string>
    <string name="disclaimer_conent">深圳市欧杰特科技有限公司保留本软件的所有权，盗版必究。</string>
    <string name="version_conent">V 0.0.0.1</string>
	<string name="contact_me">"公司网站: http://www.object-camera.com客服邮箱:
		support@object-camera.com"
	</string>
    <string name="more_about_disclaimer">软件声明</string>
    <string name="more_about_version">版本信息</string>
    <string name="more_about_contact">联系我们</string>
    <string name="camera_not_online">相机断线,请回首页重连</string>
    <string name="app_running">正在运行</string>
    <string name="sensorlist_addnewdevice">添加新设备</string>
    <string name="sensor_list_sensor">传感器</string>
    <string name="sensorlist_havedevice">您已添加的设备</string>
    <string name="add_sensor_infrerad_desc">红外是利用红外辐射的热效应,检测是否有人或者动物经过。</string>
    <string name="add_sensor_gas_desc">气感是通过气体传感器探测周围环境中可燃气体是否超过安全值。</string>
    <string name="add_sensor_smoke_desc">烟感是通过监测烟雾的浓度来实现火灾防范。</string>
    <string name="add_sensor_control_desc">无线遥控就是一种用来远程控制机器的装置。</string>
    <string name="add_sensor_siren_desc">警笛可以接收遥控器，无线门磁、无线红外等传感器的报警信号</string>
    <string name="add_sensor_door_desc">门磁是用来探测门、窗、抽屉等是否被非法打开或者移动。</string>
    <string name="start_codding_gas_desc">按下侧边的按钮，红色指示灯闪动即可</string>
    <string name="start_codding_smoke_desc">按下侧边的按钮，有声音提示完成对码</string>
    <string name="start_codding_infrerad_desc">手在红外前摆动一下</string>
    <string name="start_codding_siren_desc">接通警笛电源</string>
    <string name="sensor_type_door">门磁</string>
    <string name="sensor_type_infrared">红外</string>
    <string name="sensor_type_smoke">烟感</string>
    <string name="sensor_type_siren">警笛</string>
    <string name="sensor_type_gas">气感</string>
    <string name="sensor_type_remote">遥控器</string>
    <string name="sensor_type_camera">摄像头</string>
    <string name="sensor_type_curtain">幕帘</string>
    <string name="str_version">版本</string>
    <string name="pppp_status_initialing">已连接, 正在初始化</string>
    <string name="delete_camera">删除</string>
    <string name="list_option">操作</string>
    <string name="del_alert">确认删除?</string>
    <string name="str_search">局域网搜索</string>
    <string name="check_loction">查看录像</string>
    <string name="str_add">添加</string>
    <string name="str_about">关于</string>
    <string name="connecting">正在连接...</string>
    <string name="init_network_error">初始化网络失败</string>
    <string name="connect_failed">连接失败</string>
    <string name="edit">修改</string>
    <string name="setting">设置</string>
    <string name="string_about">关于我们</string>
    <string name="camera_type">摄像机类型</string>
    <string name="device_id_name">ID:</string>
    <string name="device_type_name">类型:</string>
    <string name="device_status_name">状态:</string>
    <string name="pppp_status_unknown">未知状态</string>
    <string name="pppp_status_connecting">正在连接</string>
    <string name="pppp_status_online">在线</string>
    <string name="pppp_status_disconnect">断线</string>
    <string name="pppp_status_connect_failed">连接失败</string>
    <string name="pppp_status_pwd_error">密码错误</string>
    <string name="pppp_status_invalid_id">ID号无效</string>
    <string name="pppp_dev_type_unknown">未知类型</string>
    <string name="device_not_on_line">摄像机不在线</string>
    <string name="pppp_mode">模式:</string>
    <string name="pppp_mode_p2p_normal">p2p连接</string>
    <string name="pppp_mode_p2p_relay">p2p转发</string>
    <string name="pppp_mode_unknown">未知</string>
    <string name="pppp_status_connect_timeout">连接超时</string>
    <string name="main_tap_here_add_vidicon">请按此处新增摄像机</string>
    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="main_select_all">全选</string>
    <string name="main_select_reverse">反选</string>
    <string name="main_edit">编辑</string>
    <string name="main_check">查看</string>
    <string name="main_vidicon">摄像机</string>
    <string name="main_alarm_event">报警事件</string>
    <string name="main_pic">图片</string>
    <string name="main_vid">录像</string>
    <string name="main_remote">远程</string>
    <string name="main_phone">手机</string>
    <string name="main_setting_prompt">摄像机不在线,无法进行设置</string>
    <string name="exit">退出</string>
    <string name="main_alarm">报警</string>
    <string name="main_more">更多</string>
    <string name="main_plea_addcam">请先添加摄像机</string>
    <string name="main_not_administrator">该用户不是管理员</string>
    <string name="main_show_back">再按一次，退出程序！</string>
    <string name="vga">普清</string>
    <string name="qvga">高清</string>
    <string name="mobile">手机</string>
    <string name="min">最低</string>
    <string name="low">低</string>
    <string name="middle">中</string>
    <string name="high">高</string>
    <string name="max">最高</string>
    <string name="right">向右</string>
    <string name="left">向左</string>
    <string name="up">向上</string>
    <string name="down">向下</string>
    <string name="preset_set">预置位设置</string>
    <string name="preset_call">预置位调用</string>
    <string name="input_camera_name">请输入摄像机名称</string>
    <string name="add_camera">添加摄像机</string>
    <string name="edit_camera">修改摄像机</string>
    <string name="camera_name">名称</string>
    <string name="camera_addr">IP地址</string>
    <string name="input_camera_addr">请输入IP地址</string>
    <string name="input_camera_port">请输入端口</string>
    <string name="input_camera_user">请输入用户名</string>
    <string name="input_camera_id">请输入设备ID</string>
    <string name="camera_id">设备ID</string>
    <string name="scan_cameraid">扫描条码</string>
    <string name="scan_cameraid_fail">扫描失败,请重新扫描</string>
    <string name="add_search_result">搜索结果</string>
    <string name="add_search_no">没有搜索到,请重试...</string>
    <string name="add_twodimensioncode">正在启动二维码程序...</string>
    <string name="searching_tip">正在搜索，请稍候...</string>
    <string name="search_camera">搜索摄像机</string>
    <string name="refresh">刷新</string>
    <string name="setting_camera">摄像机设置</string>
    <string name="setting_wifi">Wifi设置</string>
    <string name="setting_user">用户设置</string>
    <string name="setting_ftp">Ftp设置</string>
    <string name="setting_alerm">报警设置</string>
    <string name="setting_time">设备时钟设置</string>
    <string name="setting_mail">邮件设置</string>
    <string name="setting_sdcard">SD卡设置</string>
    <string name="datetime_setting">时间设置</string>
    <string name="mail_setting">邮件设置</string>
    <string name="ftp_setting">Ftp设置</string>
    <string name="alerm_setting">报警设置</string>
    <string name="sdcard_getparams">正在获取SDCard信息...</string>
    <string name="sdcard_total">SD卡总容量(M):</string>
    <string name="sdcard_remain">SD卡剩余量(M):</string>
    <string name="sdcard_state">SD卡状态:</string>
    <string name="sdcard_format">格式化</string>
    <string name="sdcard_inserted">SD卡已经插入</string>
    <string name="sdcard_no_inserted">没有插SD卡</string>
    <string name="sdcard_video">录像中...</string>
    <string name="sdcard_file_error">文件系统错误</string>
    <string name="sdcard_isformatting">SD卡正在格式化中...</string>
    <string name="sdcard_status_info">没有插卡或者需要格式化</string>
    <string name="sdcard_coverage">录像覆盖:</string>
    <string name="sdcard_recordlength">录像时长(分钟):</string>
    <string name="sdcard_recordtime">定时录像:</string>
    <string name="sdcard_schedule">SD卡设置</string>
    <string name="sdcard_range">范围5-180</string>
    <string name="sdcard_set_failed">SD卡设置失败</string>
    <string name="sdcard_set_success">SD卡设置成功</string>
    <string name="sdcard_formatsd">格式化SD卡需要30秒钟,是否格式化?</string>
    <string name="sdcard_no_inserted_format_faile">没有插SD卡，格式化失败!</string>
    <string name="exit_sd_alert">再次点击程序将在后台运行，按“确定”按钮，关闭程序。</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_checkmode">验证类型:</string>
    <string name="wifi_manager">管理WiFi网络</string>
    <string name="wifi_signal_strong">信号强度:</string>
    <string name="wifi_safe">安全性:</string>
    <string name="wifi_no_safe">无</string>
    <string name="wifi_set_failed">WiFi设置失败</string>
    <string name="wifi_set_success">WiFi设置成功,摄像机正在重启...</string>
    <string name="wifi_not_connected">未连接</string>
    <string name="wifi_scanning">WiFi正在扫描,请稍候...</string>
    <string name="wifi_scan_failed">WiFi扫描失败</string>
    <string name="wifi_getparams">正在获取WiFi信息...</string>
    <string name="wifi_getparams_failed">获取WiFi信息失败</string>
    <string name="wifi_notchange">WiFi没有更改,不需要设置</string>
    <string name="wifi_pwd_toolong">密码不能超过128位</string>
    <string name="user_admin">管理员</string>
    <string name="user_operator">操作者</string>
    <string name="user_visitor">参观者</string>
    <string name="user_setting">用户设置</string>
    <string name="user_set_failed">用户设置失败</string>
    <string name="user_set_success">用户设置成功,摄像机正在重启</string>
    <string name="user_name_no_empty">用户名不能为空</string>
    <string name="user_name">用户名:</string>
    <string name="user_getparams">正在获取用户信息...</string>
    <string name="user_getparams_failed">获取用户信息失败</string>
    <string name="user_name_toolong">用户名不能超过64位</string>
    <string name="user_pwd_toolong">密码不能超过64位</string>
    <string name="alerm_detector_layout">移动侦测布防</string>
    <string name="alerm_detector_sensitivity">移动侦测灵敏度</string>
    <string name="alerm_sensitivity_desc">(数值越小越灵敏)</string>
    <string name="alerm_io_layout">报警输入布防</string>
    <string name="alerm_trigger_level">触发电平</string>
    <string name="alerm_presetsit">报警时预置位联动</string>
    <string name="alerm_audio_level">声音侦测布防</string>
    <string name="alerm_audio_sensitivity">灵敏度</string>
    <string name="alerm_upload_picture_num">上传图片张数</string>
    <string name="alerm_io_move">报警后 IO 联动</string>
    <string name="alerm_ioout_level">输出电平</string>
    <string name="alerm_mail_inform">报警后邮件通知</string>
    <string name="alerm_upload_picture">报警后上传图片</string>
    <string name="alerm_upload_picture_time_interval"> 上传图片时间间隔(秒)</string>
    <string name="alerm_trigger_event">报警触发事件</string>
    <string name="alerm_set_failed">报警设置失败</string>
    <string name="setting_aler_sucess">报警设置成功</string>
    <string name="alerm_audio_levelhigh">高灵敏度</string>
    <string name="alerm_audio_levelmiddle">中灵敏度</string>
    <string name="alerm_audio_levellow">低灵敏度</string>
    <string name="alerm_ioin_levelhight">高电平</string>
    <string name="alerm_audio_levelforbid">禁止检测</string>
    <string name="alerm_ioin_levellow">低电平</string>
    <string name="alerm_getparams">正在获取报警信息...</string>
    <string name="takepicture_time">时间:</string>
    <string name="picture_sum">张</string>
    <string name="delete_local_picture">删除该照片</string>
    <string name="sum_pic">共: </string>
    <string name="localpic_no">沒有照片</string>
</resources>