<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/bg_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top"
        style="@style/top_bg_style"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:text="@string/back"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10.0dip"
            android:shadowColor="@color/color_shadow"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/setting"
            android:textColor="@color/color_white"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10.0dip"
            android:shadowColor="@color/color_shadow"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/setting"
            android:textColor="@color/color_white"
            android:textSize="18.0sp"
            android:textStyle="bold"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tv_select_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10.0dip"
            android:shadowColor="@color/color_shadow"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColor="@color/color_white"
            android:textSize="18.0sp"
            android:textStyle="bold"
            android:visibility="gone"
           />
        <Button
            android:id="@+id/edit"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5.0dip"
            android:background="@drawable/btnselector"
            android:text="@string/main_edit"
            android:textColor="@color/color_white"
            android:visibility="gone"
             />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/del_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="@drawable/main_bottom_bg"
        android:padding="5dp"
         >

        <Button
            android:id="@+id/selectall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/add_btn_selector"
            android:text="@string/main_select_all"
            android:textColor="@color/color_white" >
        </Button>

        <Button
            android:id="@+id/selectreverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/add_btn_selector"
            android:text="@string/main_select_reverse"
            android:textColor="@color/color_white" >
        </Button>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/add_btn_selector"
            android:text="@string/delete_local_picture"
            android:textColor="@color/color_white" >
        </Button>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/del_bottom_layout"
        android:layout_below="@+id/top"
        android:layout_margin="5dp"
        android:columnWidth="50dp"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:listSelector="@drawable/listitem_bg_selector"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" >
    </GridView>
 	<TextView
        android:id="@+id/localpic_tv_nopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:text="@string/localpic_no"
        android:textColor="@color/color_white"
        android:textSize="24sp" />
</RelativeLayout>